IA-629: script build/push proces for CKAN itslef

--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -1,6 +1,7 @@
 FROM alpine:3.9
 RUN apk --update add --no-cache curl bash openjdk8
 ENV SOLR_VERSION=6.6.2
+ENV CKAN_VERSION=2.8.2
 WORKDIR /opt/
 RUN cd /opt \
   && curl https://archive.apache.org/dist/lucene/solr/${SOLR_VERSION}/solr-${SOLR_VERSION}.tgz -o solr.tgz \
@@ -8,8 +9,8 @@ RUN cd /opt \
   && rm solr.tgz \
   && mv solr-${SOLR_VERSION}/ solr/
 ADD \
-  ./solrconfig.xml \
-  ./schema.xml \
+  https://raw.githubusercontent.com/ckan/ckan/ckan-${CKAN_VERSION}/contrib/docker/solr/solrconfig.xml \
+  https://raw.githubusercontent.com/ckan/ckan/ckan-${CKAN_VERSION}/ckan/config/solr/schema.xml \
   https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/${SOLR_VERSION}/solr/server/solr/configsets/basic_configs/conf/currency.xml \
   https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/${SOLR_VERSION}/solr/server/solr/configsets/basic_configs/conf/synonyms.txt \
   https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/${SOLR_VERSION}/solr/server/solr/configsets/basic_configs/conf/stopwords.txt \
