IA-552: Tweaking entrypoint to allow direct injection of variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,15 +20,18 @@ services:
     - 80:80
     environment:
     - AWS_PROFILE=sba-upper
-    - SMTP_USR_PARAMETER_ID=staging_SES_USER
-    - SMTP_PWD_PARAMETER_ID=staging_SES_PASSWORD
-    - POSTGRES_PWD_PARAMETER=/ckan/staging/db_password/postgres
     - POSTGRES_DB=ckan_default
     - POSTGRES_USER=ckan_default
     - POSTGRES_HOST=db
     - SITE_URL=http://localhost
     - REDIS_URL=redis://redis:6379/1
     - SOLR_URL=http://solr:8983/solr/ckan
+    - POSTGRES_PASSWORD=${POSTRES_PASSWORD}
+    #- POSTGRES_PWD_PARAMETER=/ckan/staging/db_password/postgres
+    - SMTP_USR=fakeuser
+    #- SMTP_USR_PARAMETER_ID=staging_SES_USER
+    - SMTP_PWD=fakepass
+    #- SMTP_PWD_PARAMETER_ID=staging_SES_PASSWORD
     volumes:
     - ~/.aws/:/root/.aws/
 
