IA-618: Adding wait at beginning of ckan to ensure external services are up and running

--- a/ckan/Dockerfile
+++ b/ckan/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get -q -y update \
         wget \
         gettext-base \
         jq \
+        netcat \
     && apt-get -q clean \
     && pip install awscli \
     && rm -rf /var/lib/apt/lists/*
