IA-618: adding APP_UUID and SESSION_SECRET environment variable support

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -30,11 +30,11 @@ beaker.session.key = ckan
 # This is the secret token that the beaker library uses to hash the cookie sent
 # to the client. `paster make-config` generates a unique value for this each
 # time it generates a config file.
-beaker.session.secret = g1MlW0fVkb7j7Eak8hadk9UDU
+beaker.session.secret = ${SESSION_SECRET}
 
 # `paster make-config` generates a unique value for this each time it generates
 # a config file.
-app_instance_uuid = b688d5e0-d529-4789-b902-b558fa62d272
+app_instance_uuid = ${APP_UUID}
 
 # repoze.who config
 who.config_file = %(here)s/who.ini
