--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,11 +30,15 @@ services:
     - POSTGRES_PASSWORD=fearless
     - SMTP_USR=fakeuser
     - SMTP_PWD=fakepass
+    - APP_UUID=aaaaaaaa-0000-1111-2222-bbbbbbbbbbbb
+    - SESSION_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAA
     ## To pull from AWS ParameterStore/SecretsManager, use the following:
     #- AWS_PROFILE=sba-upper
     #- POSTGRES_PASSWORD_PSID=/ckan/staging/db_password/postgres
     #- SMTP_USR_SMID=staging_SES_USER
     #- SMTP_PWD_SMID=staging_SES_PASSWORD
+    #- APP_UUID_PSID=/ckan/staging/app_uuid
+    #- SESSION_SECRET_PSID=/ckan/staging/session_secret
     volumes:
     - ~/.aws/:/root/.aws/
 
