IA-670: dockerizing the DataPusher and configuring docker-compose

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -46,10 +46,11 @@ who.log_file = %(cache_dir)s/who_log.ini
 # who.timeout = 86400
 
 ## Database Settings
-sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}?sslmode=disable
+#sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}?sslmode=disable
+sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}
 
-#ckan.datastore.write_url =
-#ckan.datastore.read_url =
+ckan.datastore.write_url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${DATASTORE_DB}
+ckan.datastore.read_url = postgresql://${DATASTORE_ROLENAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${DATASTORE_DB}
 
 # PostgreSQL' full-text search parameters
 ckan.datastore.default_fts_lang = english
@@ -100,9 +101,8 @@ ckan.redis.url = ${REDIS_URL}
 
 # Note: Add ``datastore`` to enable the CKAN DataStore
 #       Add ``datapusher`` to enable DataPusher
-#		Add ``resource_proxy`` to enable resorce proxying and get around the
-#		same origin policy
-ckan.plugins = stats text_view image_view recline_view
+#       Add ``resource_proxy`` to enable resorce proxying and get around the same origin policy
+ckan.plugins = stats text_view image_view recline_view datastore datapusher
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
@@ -163,9 +163,9 @@ ckan.feeds.author_link =
 
 # Make sure you have set up the DataStore
 
-#ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-excel application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
-#ckan.datapusher.url = DATAPUSHER_ENDPOINT_URL
-#i#ckan.datapusher.assume_task_stale_after = 3600
+ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-excel application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+ckan.datapusher.url = ${DATAPUSHER_URL}
+ckan.datapusher.assume_task_stale_after = 3600
 
 # Resource Proxy settings
 # Preview size limit, default: 1MB
