--- a/ckan/Dockerfile
+++ b/ckan/Dockerfile
@@ -1,4 +1,6 @@
 FROM debian:jessie
+
+# install dependencies
 RUN apt-get -q -y update \
     && DEBIAN_FRONTEND=noninteractive apt-get -q -y upgrade \
     && apt-get -q -y install \
@@ -24,23 +26,28 @@ RUN apt-get -q -y update \
     && pip install awscli \
     && rm -rf /var/lib/apt/lists/*
 
+# ckan install environment
 ENV CKAN_HOME /usr/lib/ckan
 ENV CKAN_VENV $CKAN_HOME/venv
 ENV CKAN_CONFIG /etc/ckan
 ENV CKAN_STORAGE_PATH=/var/lib/ckan
 
+# ckan user account
 RUN useradd -r -u 900 -m -c "ckan account" -d $CKAN_HOME -s /bin/false ckan
 
+# configure ckan virtual environment
 RUN mkdir -p $CKAN_VENV $CKAN_CONFIG $CKAN_STORAGE_PATH \
     && virtualenv $CKAN_VENV \
     && ln -s $CKAN_VENV/bin/pip /usr/local/bin/ckan-pip \
     && ln -s $CKAN_VENV/bin/paster /usr/local/bin/ckan-paster
 
+# pull the ckan source code
 RUN git clone --progress https://github.com/ckan/ckan.git $CKAN_VENV/src/ckan \
     && cd $CKAN_VENV/src/ckan/ \
     && git checkout tags/ckan-2.8.2 \
     && rm -rf .git .github
 
+# install ckan
 RUN ckan-pip install -U pip \
     && ckan-pip install --upgrade --no-cache-dir -r $CKAN_VENV/src/ckan/requirement-setuptools.txt \
     && ckan-pip install --upgrade --no-cache-dir -r $CKAN_VENV/src/ckan/requirements.txt \
@@ -48,6 +55,7 @@ RUN ckan-pip install -U pip \
     && ln -s $CKAN_VENV/src/ckan/ckan/config/who.ini $CKAN_CONFIG/who.ini \
     && chown -R ckan:ckan $CKAN_HOME $CKAN_VENV $CKAN_CONFIG $CKAN_STORAGE_PATH
 
+# customize container entrypoint that will configure the application
 COPY ckan-entrypoint.sh /ckan-entrypoint.sh
 COPY production.ini $CKAN_CONFIG/production.ini.unconfigured
 RUN chmod +x /ckan-entrypoint.sh
