IA-608: more troubleshooting datapusher/datastore extensions

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -124,7 +124,7 @@ ckan.views.default_views = image_view text_view recline_view
 
 ckan.site_title = CKAN
 ckan.site_logo = /base/images/ckan-logo.png
-ckan.site_description =
+ckan.site_description = Small Business Administration
 ckan.favicon = /base/images/ckan.ico
 ckan.gravatar_default = identicon
 ckan.preview.direct = png jpg gif
