--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,28 +14,38 @@ services:
     image: ckan
     build:
       context: ./ckan/
+    network_mode: host
     depends_on:
     - db
     - solr
     - redis
     - datapusher
-    links:
-    - db
-    - solr
-    - redis
-    - datapusher
+#    links:
+#    - db
+#    - solr
+#    - redis
+#    - datapusher
     ports:
     - 80:80
+    expose:
+    - 80
     environment:
     # Environment Specific
-    - POSTGRES_HOST=db
+#    - POSTGRES_HOST=db
+    - POSTGRES_HOST=localhost
     - SITE_URL=http://localhost
-    - REDIS_URL=redis://redis:6379/1
-    - REDIS_HOST=redis
-    - SOLR_URL=http://solr:8983/solr/ckan
-    - SOLR_HOST=solr
-    - DATAPUSHER_HOST=datapusher
-    - DATAPUSHER_URL=http://datapusher:8800
+#    - REDIS_URL=redis://redis:6379/1
+    - REDIS_URL=redis://localhost:6379/1
+#    - REDIS_HOST=redis
+    - REDIS_HOST=localhost
+#    - SOLR_URL=http://solr:8983/solr/ckan
+    - SOLR_URL=http://localhost:8983/solr/ckan
+#    - SOLR_HOST=solr
+    - SOLR_HOST=localhost
+#    - DATAPUSHER_URL=http://datapusher:8800
+    - DATAPUSHER_URL=http://localhost:8800
+#    - DATAPUSHER_HOST=datapusher
+    - DATAPUSHER_HOST=localhost
     # Secrets
     - POSTGRES_PASSWORD=fearless
     - SMTP_USR=fakeuser
@@ -58,22 +68,31 @@ services:
     image: ckan-datapusher
     build:
       context: ./ckan-datapusher/
+    network_mode: host
     ports:
     - 8800:8800
+    expose:
+    - 8080
+    #extra_hosts:
+    #- datapusher:0.0.0.0
     environment:
     # Environment Specific
-    - POSTGRES_HOST=db
+    #- POSTGRES_HOST=db
+    - POSTGRES_HOST=localhost
     # Secrets
     - POSTGRES_PASSWORD=fearless
 
   db:
     container_name: postgres
     image: postgres:11.1
+    network_mode: host
     environment:
     - POSTGRES_PASSWORD=fearless
     - POSTGRES_USER=ckan_default
     - POSTGRES_DB=ckan_default
     ports:
+    - 5432:5432
+    expose:
     - 5432
     volumes:
     - postgres:/var/lib/postgresql/data/
@@ -81,15 +100,21 @@ services:
   solr:
     container_name: solr
     image: ckan-solr
+    network_mode: host
     build:
       context: ./ckan-solr/
     ports:
     - 8983:8983
+    expose:
+    - 8983
     volumes:
     - solr:/opt/solr/server/solr/ckan/data/
 
   redis:
     container_name: redis
     image: redis:latest
+    network_mode: host
     ports:
+    - 6379:6379
+    expose:
     - 6379
