--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -19,7 +19,7 @@ debug = false
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
-port = 80
+port = ${CKAN_PORT}
 
 [app:main]
 use = egg:ckan
@@ -46,11 +46,10 @@ who.log_file = %(cache_dir)s/who_log.ini
 # who.timeout = 86400
 
 ## Database Settings
-#sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}?sslmode=disable
-sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}
+sqlalchemy.url = ${CKAN_SQLALCHEMY_URL}
 
-ckan.datastore.write_url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${DATASTORE_DB}
-ckan.datastore.read_url = postgresql://${DATASTORE_ROLENAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${DATASTORE_DB}
+ckan.datastore.write_url = ${CKAN_DATASTORE_WRITE_URL}
+ckan.datastore.read_url = ${CKAN_DATASTORE_READ_URL}
 
 # PostgreSQL' full-text search parameters
 ckan.datastore.default_fts_lang = english
@@ -59,7 +58,7 @@ ckan.datastore.default_fts_index_method = gist
 
 ## Site Settings
 
-ckan.site_url = ${SITE_URL}
+ckan.site_url = ${CKAN_SITE_URL}
 #ckan.use_pylons_response_cleanup_middleware = true
 
 ## Authorization Settings
@@ -78,14 +77,14 @@ ckan.auth.roles_that_cascade_to_sub_groups = admin
 
 ## Search Settings
 
-ckan.site_id = ${SITE_ID}
-solr_url = ${SOLR_URL}
+ckan.site_id = ${CKAN_SITE_ID}
+solr_url = ${CKAN_SOLR_URL}
 
 
 ## Redis Settings
 
 # URL to your Redis instance, including the database to be used.
-ckan.redis.url = ${REDIS_URL}
+ckan.redis.url = ${CKAN_REDIS_URL}
 
 
 ## CORS Settings
@@ -164,7 +163,7 @@ ckan.feeds.author_link =
 # Make sure you have set up the DataStore
 
 ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-excel application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
-ckan.datapusher.url = ${DATAPUSHER_URL}
+ckan.datapusher.url = ${CKAN_DATAPUSHER_URL}
 ckan.datapusher.assume_task_stale_after = 3600
 
 # Resource Proxy settings
@@ -184,13 +183,13 @@ ckan.hide_activity_from_users = %(ckan.site_id)s
 
 ## Email settings
 
-email_to = sbaias@fearless.tech
-error_email_from = websupport@sba.gov
-smtp.server = email-smtp.us-east-1.amazonaws.com:587
-smtp.starttls = True
-smtp.user = ${SMTP_USR}
-smtp.password = ${SMTP_PWD}
-smtp.mail_from = websupport@sba.gov
+email_to = ${CKAN_SMTP_MAIL_TO}
+error_email_from = ${CKAN_SMTP_MAIL_FROM}
+smtp.server = ${CKAN_SMTP_SERVER}
+smtp.starttls = ${CKAN_SMTP_STARTTLS}
+smtp.user = ${CKAN_SMTP_USER}
+smtp.password = ${CKAN_SMTP_PASSWORD}
+smtp.mail_from = ${CKAN_SMTP_MAIL_FROM}
 
 
 ## Logging configuration
