IA-608: fixed missing docker tag step for ckan-datapusher

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,8 @@ jobs:
           container: ckan
       - dockertag:
           container: ckan-solr
+      - dockertag:
+          container: ckan-datapusher
       - deploy:
           name: ECR login
           command: $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
