IA-613: adding ckan pages plugin

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -101,7 +101,7 @@ ckan.redis.url = ${CKAN_REDIS_URL}
 # Note: Add ``datastore`` to enable the CKAN DataStore
 #       Add ``datapusher`` to enable DataPusher
 #       Add ``resource_proxy`` to enable resorce proxying and get around the same origin policy
-ckan.plugins = stats text_view image_view recline_view datastore datapusher
+ckan.plugins = stats text_view image_view recline_view datastore datapusher pages
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
@@ -191,6 +191,15 @@ smtp.user = ${CKAN_SMTP_USER}
 smtp.password = ${CKAN_SMTP_PASSWORD}
 smtp.mail_from = ${CKAN_SMTP_MAIL_FROM}
 
+## Pages settings
+
+# ckanext.pages.organization = True
+# ckanext.pages.group = True
+# ckanext.pages.about_menu = False
+# ckanext.pages.group_menu = False
+# ckanext.pages.organization_menu = False
+# ckanext.pages.editor = medium
+ckanext.pages.editor = ckeditor
 
 ## Logging configuration
 [loggers]
