IA-658: Adding SBA Branding

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -121,10 +121,10 @@ ckan.views.default_views = image_view text_view recline_view
 #ckan.base_public_folder = public-bs2
 #ckan.base_templates_folder = templates-bs2
 
-ckan.site_title = CKAN
-ckan.site_logo = /base/images/ckan-logo.png
-ckan.site_description = Small Business Administration
-ckan.favicon = /base/images/ckan.ico
+ckan.site_title = SBA Open Data
+ckan.site_logo = /base/images/sba-logo.png
+ckan.site_description = Small Business Administration Open Data Warehouse
+ckan.favicon = /base/images/sba-favicon.ico
 ckan.gravatar_default = identicon
 ckan.preview.direct = png jpg gif
 ckan.preview.loadable = html htm rdf+xml owl+xml xml n3 n-triples turtle plain atom csv tsv rss txt json
