--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,3 +94,46 @@ services:
     - 6379:6379
     expose:
     - 6379
+  ckan-create-admin-user:
+    # Create user on startup, then shutdown
+    #
+    command: 'echo "y" | ckan-paster --plugin=ckan sysadmin add ckanadmin email=fake@z.z password=ckanadmin --config /etc/ckan/production.ini'
+    #command: 'waitfor localhost 80; ckan-paster --plugin=ckan sysadmin add ckanadmin email=fake@z.z password=ckanadmin --config /etc/ckan/production.ini'
+    #command: >
+    #  /bin/bash -c "sleep 30;
+    #  /ckan-entrypoint.sh ckan-paster --plugin=ckan sysadmin add ckanadmin email=fake@z.z password=ckanadmin --config /etc/ckan/production.ini"
+    restart: "no"
+    depends_on:
+    - "ckan"
+    image: ckan
+    build:
+      context: ./ckan/
+    network_mode: host
+    environment:
+    # Environment Specific
+    - POSTGRES_FQDN=localhost
+    - REDIS_FQDN=localhost
+    - SOLR_FQDN=localhost
+    - DATAPUSHER_FQDN=localhost
+    - CKAN_SITE_URL=http://localhost
+    - CKAN_SMTP_MAIL_TO=fake@e.mail
+    - CKAN_SMTP_MAIL_FROM=fake@e.mail
+    # (Optional) Defaults to 'email-smtp.us-east-1.amazonaws.com'
+    - SMTP_FQDN=smtp.fake.mail
+    # Secrets
+    - POSTGRES_PASSWORD=fearless
+    - CKAN_SMTP_USER=fake
+    - CKAN_SMTP_PASSWORD=fake
+    - APP_UUID=AAAAAAAA-0000-1111-2222-BBBBBBBBBBBB
+    - SESSION_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAA
+    ## AWS Configuration: To pull from AWS ParameterStore/SecretsManager, use the following:
+    #- AWS_PROFILE=<your-profile-name-here>
+    #- POSTGRES_PASSWORD_PSID=/ckan/staging/db_password/postgres
+    #- CKAN_SMTP_USER_SMID=staging_SES_USER
+    #- SMTP_PWD_SMID=staging_SES_PASSWORD
+    #- APP_UUID_PSID=/ckan/staging/app_uuid
+    #- SESSION_SECRET_PSID=/ckan/staging/session_secret
+    volumes:
+    - ckan:/var/lib/ckan/
+    ## AWS Configuration: uncomment this line and ensure you have your AWS credentials configured in your local ~/.aws directory
+    #- ~/.aws/:/root/.aws/
