--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ commands:
       - run:
           name: Scanning for PII (Poirot)
           command: |
-            poirot --patterns https://raw.githubusercontent.com/USSBA/sba-gov-ckan/master/poirot-patterns.txt --revlist="master^..HEAD" --verbose
+            poirot --patterns https://raw.githubusercontent.com/USSBA/sba-gov-ckan/master/poirot-patterns.txt --revlist="master^..HEAD"
   dockerbuild:
     parameters:
       container:
