--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -124,6 +124,14 @@ ckan.views.default_views = image_view text_view recline_view
 ckan.site_title = SBA Open Data
 ckan.site_logo = /base/images/sba-logo.png
 ckan.site_description = Small Business Administration Open Data Warehouse
+ckan.site_intro_text = # Welcome to Data.SBA.gov
+  This is the home of the U.S. Small Business Administration's open data. Here you will find data, tools, resources and more from across SBA.
+  <br/><br/>
+  Open data is important because it provides transparency into government programs, insight as to how policies have performed, and it enables US citizens to leverage government data for innovation.
+  <br/><br/>
+  The SBA publishes open data on its programs, including data on disaster assistance, lending, contracting, and counseling.
+  <br/><br/>
+  ![U.S. Small Business Administration](base/images/SBA-Logo-Stacked-300.png "U.S. Small Business Administration")
 ckan.favicon = /base/images/sba-favicon.ico
 ckan.gravatar_default = identicon
 ckan.preview.direct = png jpg gif
@@ -200,6 +208,8 @@ smtp.mail_from = ${CKAN_SMTP_MAIL_FROM}
 # ckanext.pages.organization_menu = False
 # ckanext.pages.editor = medium
 ckanext.pages.editor = ckeditor
+
+#ckan.featured_orgs = disaster
 
 ## Logging configuration
 [loggers]
