IA-893: force good exit status for snyk scan job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ commands:
           container: << parameters.container >>
       - deploy:
           name: Snyk scan << parameters.container >> container
-          command: snyk test --docker << parameters.container >>:latest --file=<< parameters.container >>/Dockerfile --exclude-base-image-vulns
+          command: snyk test --docker << parameters.container >>:latest --file=<< parameters.container >>/Dockerfile --exclude-base-image-vulns || true
   cache_restore:
     parameters:
       container:
