IA-956: change max resource size to 3072mib (3gib)

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -163,7 +163,7 @@ ckan.feeds.author_link =
 ## Storage Settings
 
 #ckan.storage_path = /var/lib/ckan
-#ckan.max_resource_size = 10
+ckan.max_resource_size = 3072
 #ckan.max_image_size = 2
 
 ## Datapusher settings
